--- a/main.html
+++ b/main.html
@@ -8,9 +8,36 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<header><h1>Name of the movie</h1></header>
+	<nav>
+		<a href="actor" id="nav-actor">Actors</a>
+		<a href="quote" id="nav-quote">Quotes</a>
+	</nav>
+	<summary>short summery of movie</summary>
+	<section id="actor">
+		<p>
+			Sidheshwar choure
+		</p>
 
+	</section>
+	<section id="quote">
+		<p> The seen about our nation's integrity.</p>
+
+	</section>
+    
+<aside>
+	<p>imdb rating:7</p>
+	<p>release date: 15 December 2022</p>
+</aside>
+<footer>
+	<h3>Produced by:</h3>
+	<ul>
+		<li>Sidheshwar</li>
+		<li>Uttreshwar</li>
+	</ul>
+</footer>
+<script type="text/javascript" src="./script.js">
+</script>
 </body>
 
 </html>
