--- a/main.html
+++ b/main.html
@@ -21,16 +21,13 @@
 
 	</section>
 	<section id="quote">
-		<p> The seen about our nation's integrity.</p>
-
-	</section>
+		<p>seen about our nation's integrity.</p>
+    </section>
     
 <aside>
 	<p>imdb rating:7</p>
 	<p>release date: 15 December 2022</p>
-</aside>
-</body>
-<footer>
+</aside><footer>
 	<h3>Produced by:</h3>
 	<ul>
 		<li>Sidheshwar</li>
@@ -38,6 +35,7 @@
 	</ul>
 </footer>
 
+</body>
 <script type="text/javascript" src="./script.js">
 </script>
 
