--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<a href="actor" id="nav-actor">Actors</a>
 		<a href="quote" id="nav-quote">Quotes</a>
 	</nav>
-	<summary>short summery of movie</summary>
+	<summary>short summery of movie</summary><br>
 	<section id="actor">
 		<p>
 			Sidheshwar choure
@@ -25,9 +25,9 @@
     </section>
     
 <aside>
-	<p>imdb rating:7</p>
-	<p>release date: 15 December 2022</p>
-</aside><footer>
+	<p>imdb rating:7<br>release date: 15 December 2022</p>
+</aside>
+<footer>
 	<h3>Produced by:</h3>
 	<ul>
 		<li>Sidheshwar</li>
