--- a/main.html
+++ b/main.html
@@ -8,12 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<header><h1>Name of the movie</h1></header>
+	<div>
+	<header><h1>Sidheshwar</h1>
 	<nav>
 		<a href="actor" id="nav-actor">Actors</a>
 		<a href="quote" id="nav-quote">Quotes</a>
 	</nav>
+	</header>
 	<summary>short summery of movie</summary><br>
+	<main>
 	<section id="actor">
 		<p>
 			Sidheshwar choure
@@ -23,18 +26,16 @@
 	<section id="quote">
 		<p>seen about our nation's integrity.</p>
     </section>
-    
-<aside>
-	<p>imdb rating:7<br>release date: 15 December 2022</p>
-</aside>
+	<aside>
+		<p>imdb rating:7<br>release date: 15 December 2022</p>
+	</aside>
+    </main>
 <footer>
 	<h3>Produced by:</h3>
-	<ul>
 		<li>Sidheshwar</li>
 		<li>Uttreshwar</li>
-	</ul>
 </footer>
-
+</div>
 </body>
 <script type="text/javascript" src="./script.js">
 </script>
