--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
 	</aside>
     </main>
 <footer>
-	<h3>Produced by:</h3>
+	<p>Produced by:</p>
 		<li>Sidheshwar</li>
 		<li>Uttreshwar</li>
 </footer>
