--- a/main.html
+++ b/main.html
@@ -11,11 +11,11 @@
 	<div>
 	<header><h1>Sidheshwar</h1>
 	<nav>
-		<a href="actor" id="nav-actor">Actors</a>
+		<a href="actor" id="nav-actor">Actors</a><br>
 		<a href="quote" id="nav-quote">Quotes</a>
 	</nav>
 	</header>
-	<summary>short summery of movie</summary><br>
+	<summary><p>short summery of movie</p></summary>
 	<main>
 	<section id="actor">
 		<p>
@@ -27,13 +27,13 @@
 		<p>seen about our nation's integrity.</p>
     </section>
 	<aside>
-		<p>imdb rating:7<br>release date: 15 December 2022</p>
+		<p>imdb rating:7/10<br>release date: 15 December 2022</p>
 	</aside>
     </main>
 <footer>
-	<p>Produced by:</p>
-		<li>Sidheshwar</li>
-		<li>Uttreshwar</li>
+	   <p>Produced by:</p>
+       <li>Sidheshwar</li>
+	   <li>Uttreshwar</li>
 </footer>
 </div>
 </body>
