--- a/main.html
+++ b/main.html
@@ -9,14 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-	<header><h1>Sidheshwar</h1>
+	<header><h1>Sidheshwar</h1></header>
 	<nav>
-		<a href="actor" id="nav-actor">Actors</a><br>
+		<a href="actor" id="nav-actor">Actors</a>
 		<a href="quote" id="nav-quote">Quotes</a>
 	</nav>
-	</header>
-	<summary><p>short summery of movie</p></summary>
-	<main>
+	<summary>short summery of movie</summary> <br>
 	<section id="actor">
 		<p>
 			Sidheshwar choure
@@ -29,7 +27,6 @@
 	<aside>
 		<p>imdb rating:7/10<br>release date: 15 December 2022</p>
 	</aside>
-    </main>
 <footer>
 	   <p>Produced by:</p>
        <li>Sidheshwar</li>
