--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
 	<div>
 	<header><h1>Sidheshwar</h1></header>
 	<nav>
-		<a href="actor" id="nav-actor">Actors</a>
-		<a href="quote" id="nav-quote">Quotes</a>
+		<a href="Actors" id="nav-actor">Actors</a>
+		<a href="Quotes" id="nav-quote">Quotes</a>
 	</nav>
 	<summary>short summery of movie</summary> <br>
 	<section id="actor">
