--- a/main.html
+++ b/main.html
@@ -9,24 +9,24 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-	<header><h1>Sidheshwar</h1></header>
+	<header><h1>Sidheshwar</h1>
 	<nav>
 		<a href="Actors" id="nav-actor">Actors</a>
 		<a href="Quotes" id="nav-quote">Quotes</a>
 	</nav>
+	</header>
 	<summary>short summery of movie</summary> <br>
+	<main>
 	<section id="actor">
-		<p>
-			Sidheshwar choure
-		</p>
-
-	</section>
+		<p>Sidheshwar choure</p>
+    </section>
 	<section id="quote">
 		<p>seen about our nation's integrity.</p>
     </section>
 	<aside>
 		<p>imdb rating:7/10<br>release date: 15 December 2022</p>
 	</aside>
+	</main>
 <footer>
 	   <p>Produced by:</p>
        <li>Sidheshwar</li>
