--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
 	<div>
 	<header><h1>Sidheshwar</h1>
 	<nav>
-		<a href="https://www.google.com" id="nav-actor">Actors</a>
-		<a href="https://www.acciojob.com" id="nav-quote">Quotes</a>
+		<a href="#" id="nav-actor">Actors</a>
+		<a href="#" id="nav-quote">Quotes</a>
 	</nav>
 	</header>
 	<summary>short summery of movie</summary> <br>
